# turbo-guacamole

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  fly.toml
.database/: init.sql  start-db.sh
.docs/: README.md
.github/workflows/: deploy.yml
docs/: DEPLOYMENT.md
sql/: cleanup_stale_urls.sql  schema.sql
sql/clicks/: get_code_daily_clicks.sql  get_code_total_clicks.sql  insert.sql
sql/stats/: get_stats.sql
sql/urls/: delete_code.sql  find_code_by_url.sql  find_url_by_code.sql  list_all.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
src/api/: mod.rs  v1.rs
src/api/handlers/: admin.rs  analytics.rs  health.rs  mod.rs  redirect.rs  shorten.rs
src/api/middleware/: rate_limit.rs  request_id.rs  tracing.rs
src/cache/: mod.rs
src/db/: mod.rs  queries.rs
src/handlers/: admin.rs  mod.rs  redirect.rs  shorten.rs
src/middleware/: rate_limit.rs
src/models/: mod.rs
static/: index.html
