[package]
name = "turbo-guacamole"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
dotenvy = "0.15.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
