[package]
name = "turbo-guacamole"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
governor = "0.10.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
